k8s/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: es-autocomplete-deployment
  labels:
    app: es-autocomplete
spec:
  replicas: 3
  selector:
    matchLabels:
      app: es-autocomplete
  template:
    metadata:
      labels:
        app: es-autocomplete
    spec:
      containers:
      - name: es-autocomplete
        image: us.gcr.io/avian-compiler-198804/es-autocomplete:latest
        ports:
        - containerPort: 3000
