k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: es-autocomplete-ingress
spec:
  backend:
    serviceName: es-autocomplete-service
    servicePort: 80
